<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mimic_image_view2"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/yellow_electrical_car"
            android:src="@drawable/ev" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/shape"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mimic_brand_name_text_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/volkswagen_mimic"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mimic_model_text_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/polo_vivo_mimic"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mimic_year_text_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/year_mimic"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mimic_mileage_text_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mileage_mimic"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mimic_transmission_text_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/transmission_mimic"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mimic_price_text_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/vehicle_price_mimic"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mimic_fuel_text_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/fuel_mimic"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enquiry_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape"
                android:text="@string/enquire_mimic"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>