<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".VehicleCategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/suv_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/suv_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:contentDescription="@string/suv_vehicle"
                android:src="@drawable/suv"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/suv"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/mini_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/mini_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:contentDescription="@string/mini_bus_vehicle"
                android:src="@drawable/minibus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/minibus"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/sedan_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/sedan_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:contentDescription="@string/sedan_vehicle"
                android:src="@drawable/sedan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/Sedan"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/van_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/van_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:contentDescription="@string/pick_up_truck_vehicle"
                android:src="@drawable/van" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/van"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/ev_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/ev_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:contentDescription="@string/electrical_vehicle"
                android:src="@drawable/ev" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/ev"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/hatch_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/hatch_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:contentDescription="@string/hatch_vehicle"
                android:src="@drawable/hatch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/hatch"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>