<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/lady_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/picture_of_people"
        android:scaleType="centerCrop"
        android:src="@drawable/customer_four" />

    <TextView
        android:id="@+id/slide_message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/slide_your_phone"
        android:textColor="@color/brand_yellow"
        android:textSize="36sp" />

    <ImageButton
        android:id="@+id/slides_navigation_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/slide_message_text_view"
        android:background="@null"
        android:contentDescription="@string/right_chevron"
        android:src="@drawable/ic_baseline_chevron_right_48" />

    <ImageButton
        android:id="@+id/slides_navigation_image_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@id/slide_message_text_view"
        android:background="@null"
        android:contentDescription="@string/left_chevron"
        android:src="@drawable/ic_baseline_chevron_left_48" />
</RelativeLayout>