<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/african_lady"
    android:scaleType="centerCrop">

    <TextView
        android:id="@+id/slide_message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/slide_your_phone"
        android:textColor="@color/brand_yellow"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/slides_navigation_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/slide_message_text_view"
        android:background="@null"
        android:contentDescription="@string/right_chevron"
        android:src="@drawable/ic_baseline_chevron_right_48" />

    <TextView
        android:id="@+id/slide_message_others_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/slides_navigation_image_button"
        android:layout_centerInParent="true"
        android:text="@string/lets_hear_what_others_have_to_say"
        android:textColor="@color/brand_yellow"
        android:textSize="18sp"
        android:textStyle="italic" />
</RelativeLayout>